--- a/src/lib/Sisma.csproj
+++ b/src/lib/Sisma.csproj
@@ -7,4 +7,8 @@
     <OutputType>exe</OutputType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="WatsonWebsocket" Version="4.0.9" />
+  </ItemGroup>
+
 </Project>
