--- a/src/lib/Sisma.csproj
+++ b/src/lib/Sisma.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.1" />
     <PackageReference Include="WatsonWebsocket" Version="4.0.9" />
   </ItemGroup>
 
