--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
   }
