--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
