update name of env variables

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,5 +1,5 @@
 SISMA_KEY=1234567890
-HOST=0.0.0.0
-PORT=8080
-DOCKER_HOST=127.0.0.1
-DOCKER_PORT=2375
+SISMA_HOST=0.0.0.0
+SISMA_PORT=8080
+SISMA_DOCKER_HOST=127.0.0.1
+SISMA_DOCKER_PORT=2375
