--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,6 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore src/lib/
+      run: dotnet restore core/
     - name: Build
-      run: dotnet build --no-restore src/lib/
+      run: dotnet build --no-restore core/
