--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "check-disk-space": "^3.4.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "node-os-utils": "^1.3.7",
     "nodemon": "^2.0.22"
   }
 }
