--- a/console/package.json
+++ b/console/package.json
@@ -13,7 +13,11 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@typescript-eslint/typescript-estree": "^5.59.9",
+    "body-parser": "^1.20.2",
+    "cookies-next": "^2.1.2",
     "next": "13.4.4",
+    "next-cookies": "^2.0.3",
+    "raw-body": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
