--- a/omninanny-server/package.json
+++ b/omninanny-server/package.json
@@ -9,8 +9,14 @@
         "dev": "npx tsc -b && npx concurrently \"npx tsc -w\" \"npx nodemon build/main.js\""
     },
     "dependencies": {
+        "@types/express": "^4.17.21",
+        "@types/node": "^20.9.0",
+        "@types/ws": "^8.5.9",
         "concurrently": "^8.2.2",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
         "nodemon": "^3.0.1",
-        "typescript": "^5.2.2"
+        "typescript": "^5.2.2",
+        "ws": "^8.14.2"
     }
 }
