--- a/kuphy-worker/package.json
+++ b/kuphy-worker/package.json
@@ -13,5 +13,14 @@
     "bugs": {
         "url": "https://github.com/alec1o/kuphy/issues"
     },
-    "homepage": "https://kuphy.kezero.com"
+    "homepage": "https://kuphy.kezero.com",
+    "dependencies": {
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.21",
+        "@types/node": "^20.9.4",
+        "typescript": "^5.3.2"
+    }
 }
