--- a/kuphy-worker/.gitignore
+++ b/kuphy-worker/.gitignore
@@ -1,5 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# custom
+/[Oo]ut
+/[Dd]ist
+/[Bb]uild
+/[Oo]utput
+/[Rr]elease
+/.[Oo]ut
+/.[Dd]ist
+/.[Bb]uild
+/.[Oo]utput
+/.[Rr]elease
+
 # dependencies
 /node_modules
 /.pnp
