--- a/kuphy-worker/package.json
+++ b/kuphy-worker/package.json
@@ -19,12 +19,15 @@
     },
     "homepage": "https://kuphy.kezero.com",
     "dependencies": {
+        "check-disk-space": "^3.4.0",
         "dotenv": "^16.3.1",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "route-cache": "^0.6.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
         "@types/node": "^20.9.4",
+        "@types/route-cache": "^0.5.4",
         "concurrently": "^8.2.2",
         "nodemon": "^3.0.1",
         "typescript": "^5.3.2"
